--- a/crud.html
+++ b/crud.html
@@ -9,27 +9,30 @@
 
 <body>
     <div class="container">
-        <form>
+        <form method="post" id="contactform">
             <div class="form-group">
                 <label>Name:</label>
-                <input type="text" name="name" class="form-control" value="Paresh" required="">
+                <input type="text" name="name" id="name" class="form-control" value="Paresh">
+                <span class="error">Enter your name here</span>
             </div>
             <div class="form-group">
                 <label>Email:</label>
-                <input type="text" name="email" class="form-control" value="paresh@gmail.com" required="">
+                <input type="text" name="email" id="email" class="form-control" value="paresh@gmail.com">
+                <span class="error" id="invalid_email">Email-id is invalid</span>
             </div>
-            <button type="submit" class="btn btn-success save-btn">Save</button>
+            <button type="submit" id="submit" class="btn btn-success save-btn">Save</button>
+            <input class="btn btn-primary reset" type="reset" value="Reset">
+            <br/>
+            <table class="table table-bordered data-table">
+                <thead>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th width="200px">Action</th>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
         </form>
-        <br/>
-        <table class="table table-bordered data-table">
-            <thead>
-                <th>Name</th>
-                <th>Email</th>
-                <th width="200px">Action</th>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
     </div>
     <script src="./app.js"></script>
 </body>
