--- a/crud.html
+++ b/crud.html
@@ -22,6 +22,7 @@
             </div>
             <button type="submit" id="submit" class="btn btn-success save-btn">Save</button>
             <input class="btn btn-primary reset" type="reset" value="Reset">
+            <input class="btn btn-danger clear" type="clear" value="clear">
             <br/>
             <table class="table table-bordered data-table">
                 <thead>
@@ -29,7 +30,7 @@
                     <th>Email</th>
                     <th width="200px">Action</th>
                 </thead>
-                <tbody>
+                <tbody id="tbody">
                 </tbody>
             </table>
         </form>
